@@ -5,6 +5,7 @@ Changelog
 1.5.7 (unreleased)
 ------------------
 - Show 'Any' instead of 'Whatever'
+- Wrap search text in quotes to avoid query parsers errors
 
 1.5.6
 -----
